Updated the audio example, made the sound engine more error proof and added reset code to the touch screen library. I also changed in every plist the icon reference from icon.png to Icon.png
git-svn-id: http://oolongengine.googlecode.com/svn/trunk@76 7fa7efda-f44a-0410-a86a-c1fddb4bcab7

--- a/Oolong Engine2/Examples/Renderer/01 Skeleton/Info.plist
+++ b/Oolong Engine2/Examples/Renderer/01 Skeleton/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon.png</string>
+	<string>icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>*</string>
+	<string>com.yourcompany.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,9 +24,9 @@
 	<string>1.5</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>NSMainNibFile</key>
+	<string>MainWindow</string>
 </dict>
 </plist>
