--- a/Oolong Engine2/Makefile
+++ b/Oolong Engine2/Makefile
@@ -11,5 +11,5 @@ all:
 # to your ~/.vimrc to be able to use tags within MacVim where ever your session is ran from
 tags:
 	@echo "making tags for engine sourcecode (except Examples)"
-	@ctags -R --c++-kinds=+p --fields=+iaS --extra=+q --exclude=Examples/* .
+	@ctags -R --c++-kinds=+p --fields=+iaS --extra=+q --exclude=Examples/* --exclude=DoxyDocs/* .
 
