This is the iPad Edition of Oolong. This works in iPad's native resolution. There is also a new functionality that returns device types. We also fixed the bug in the resource path code with NSUTF8StringEncoding. Thanks for bringing this to our attention.
git-svn-id: http://oolongengine.googlecode.com/svn/trunk@206 7fa7efda-f44a-0410-a86a-c1fddb4bcab7

--- a/Oolong Engine2/Examples/Demos/ReadBlend/ReadBlend-Info.plist
+++ b/Oolong Engine2/Examples/Demos/ReadBlend/ReadBlend-Info.plist
@@ -26,5 +26,9 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string></string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>NSMainNibFile~ipad</key>
+	<string>-iPad</string>
 </dict>
 </plist>
